get actual list for list view and add state to paginate component and make tripwidget components dynamic except theme

--- a/public/img/filter/filter.html
+++ b/public/img/filter/filter.html
@@ -28,27 +28,27 @@
             <label class="checkbox" for="five-star">
                 <input type="checkbox" name="filter by starts" value="" id="five-star">
                 <span></span>
-                <div class="starts starts-five"><i></i><i></i><i></i><i></i><i></i></div>
+                <div class="starts starts-5"><i></i><i></i><i></i><i></i><i></i></div>
             </label>
             <label class="checkbox" for="four-star">
                 <input type="checkbox" name="filter by starts" value="" id="four-star">
                 <span></span>
-                <div class="starts starts-four"><i></i><i></i><i></i><i></i><i></i></div>
+                <div class="starts starts-4"><i></i><i></i><i></i><i></i><i></i></div>
             </label>
             <label class="checkbox" for="three-star">
                 <input type="checkbox" name="filter by starts" value="" id="three-star">
                 <span></span>
-                <div class="starts starts-three"><i></i><i></i><i></i><i></i><i></i></div>
+                <div class="starts starts-3"><i></i><i></i><i></i><i></i><i></i></div>
             </label>
             <label class="checkbox" for="two-star">
                 <input type="checkbox" name="filter by starts" value="" id="two-star">
                 <span></span>
-                <div class="starts starts-two"><i></i><i></i><i></i><i></i><i></i></div>
+                <div class="starts starts-2"><i></i><i></i><i></i><i></i><i></i></div>
             </label>
             <label class="checkbox" for="one-star">
                 <input type="checkbox" name="filter by starts" value="" id="one-star">
                 <span></span>
-                <div class="starts starts-one"><i></i><i></i><i></i><i></i><i></i></div>
+                <div class="starts starts-1"><i></i><i></i><i></i><i></i><i></i></div>
             </label>
         </div>
         <div class="checkbox-filter">
