--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>TravPace</title>
     <link href="https://fonts.googleapis.com/css?family=Cairo:200,300,400,600,700,900|Open+Sans+Condensed:300,700" rel="stylesheet">
 </head>
 
