--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     -->
     <title>TravPace</title>
     <link href="https://fonts.googleapis.com/css?family=Cairo:200,300,400,600,700,900|Open+Sans+Condensed:300,700" rel="stylesheet">
+    <link href="dashboard.css" rel="stylesheet">
 </head>
 
 <body>
